--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -3,7 +3,7 @@
 The dynamics of an Architrino are governed by a simple action: an acceleration caused by the intersection of its path with a potential field.
 For detailed derivations and worked explanations, see 00.2.1 — Exposition (walkthroughs index).
 
-Geodesics and dynamics: The background is fixed (absolute time × Euclidean space); free paths are straight. Accelerations come only from delayed, purely radial hits from emitted spheres—never from background curvature.
+Geodesics and dynamics: The background is fixed (absolute time × Euclidean space); free paths are straight. Accelerations come only from delayed, purely radial hits from emitted shells—never from background curvature.
 
 ### **Units and constants**
 -   We choose units with field speed $v=1$ (select $L_0,T_0$ so $v=L_0/T_0=1$); all speeds are hence dimensionless.
@@ -96,13 +96,13 @@ while preserving total emission $q_{\text{eff}}$. This produces continuous-in-ti
     $$
     \Phi_{\text{net}} = \sum_{i} \Phi_i
     $$
-    The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting potential spheres. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting (and emitter-side speed modulation), which makes local sources dominate.
+    The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting expanding spherical shells. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting (and emitter-side speed modulation), which makes local sources dominate.
 
 -   **Velocity Dependence:** The dynamics are velocity-dependent. Architrinos are transceivers: they emit potential spheres at a constant cadence; only the per-wavefront amplitude is modulated by the emitter’s speed. The receiver’s speed does not change the instantaneous force magnitude; it affects only the work rate via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$. Self-interaction requires $|\mathbf{v}_a| > v$ at some emission times (super-field-speed), so the worldline outruns its recent shells; curvature alone is insufficient if $|\mathbf{v}_a|<v$ everywhere.
 
 ### **Self-Interaction**
 
-A crucial dynamic arises from the possibility of self-interaction. An Architrino can intersect a potential sphere that it emitted itself at an earlier point in its history. Self-interaction can occur when an Architrino’s speed has exceeded field speed ($|\mathbf{v}_a| > v$). In this regime, the particle moves ahead of previously emitted wavefronts, allowing it to interact with its own field. This self-interaction is always repulsive and plays a key role in the stability of emergent structures. In plain English: like a fast boat catching its own wake after turning, an Architrino can run into its earlier spheres and get a push away from its past positions.
+A crucial dynamic arises from the possibility of self-interaction. An Architrino can intersect an expanding spherical shell that it emitted itself at an earlier point in its history. Self-interaction can occur when an Architrino’s speed has exceeded field speed ($|\mathbf{v}_a| > v$). In this regime, the particle moves ahead of previously emitted wavefronts, allowing it to interact with its own field. This self-interaction is always repulsive and plays a key role in the stability of emergent structures. In plain English: like a fast boat catching its own wake after turning, an Architrino can run into its earlier spheres and get a push away from its past positions.
 
 ### **Informational Ambiguity at the Receiver**
 
@@ -121,4 +121,4 @@ Level-set relation (speed–distance tradeoff): For a fixed observed per-hit mag
    pairs satisfy $r \propto \sqrt{f(\beta_{\text{em}})}$, so faster emitters would have been closer along one of the two open rays. With the default $f(\beta)=1/(1+\beta)$ this reduces to $r \propto 1/\sqrt{\,1+\beta_{\text{em}}\,}$. A stationary surrogate can either keep $r$ and absorb speed into $q_{\mathrm{eff}}$, or
    keep $q$ fixed and move to $r_{\mathrm{virtual}} = r/\sqrt{\,f(\beta_{\text{em}})\,}$.
 
-This ambiguity is compounded by superposition. The net potential at any instant is the sum of all intersecting spheres. A measured potential along a single radial could be the result of a complex confluence of fields from many different emitters located along that line of action, arriving from both directions.
+This ambiguity is compounded by superposition. The net potential at any instant is the sum of all intersecting expanding spherical shells. A measured potential along a single radial could be the result of a complex confluence of fields from many different emitters located along that line of action, arriving from both directions.
