--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.3 - Walkthrough Step 3 — Causal set and delay geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.3 - Walkthrough Step 3 — Causal set and delay geometry.md
@@ -11,13 +11,13 @@ Clarification: “Multi-valued” means that, for a fixed observation time $t$, 
 
 Detailed explanation (geometry of delay and roots):
 
-- Root condition as a light-sphere intersection:
+- Root condition as an expanding spherical shell intersection:
   - Define $F(t_0; t) \equiv \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t_0)\| - (t - t_0)$ (with $v=1$ units). Causal roots satisfy $F(t_0; t)=0$ with $t_0 < t$ and $H(t-t_0)$.
   - Geometrically: the source point $\mathbf{s}_o(t_0)$ must lie on the sphere of radius $\tau = t - t_0$ centered at the receiver’s current position $\mathbf{s}_{o'}(t)$.
 
 - Local uniqueness (sub-field-speed, transverse crossing):
   - If the source speed is locally sub-field-speed ($\|\mathbf{v}_o(t_0)\|<1$) and the derivative $\partial_{t_0}F(t_0;t) = -\hat{\mathbf{r}}\!\cdot\!\mathbf{v}_o(t_0) + 1$ is nonzero at the root, then the implicit function theorem guarantees a unique, smooth root branch near $t$.
-  - Intuition: the expanding “light-sphere” intersects the moving source path transversely.
+  - Intuition: the expanding spherical shell intersects the moving source path transversely.
 
 - Multiple roots (require super-field-speed):
   - When $\|\mathbf{v}_o\|> 1$ at some emission times, the source can outpace recent shells, allowing several distinct historical points to satisfy the same distance–time constraint (multi-hit regime). If $\|\mathbf{v}_o\|<1$ everywhere, $F(t_0;t)$ is strictly increasing in $t_0$, so at most one causal root exists.
