--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
@@ -62,3 +62,4 @@ Notes:
 - Bold symbols denote vectors; hats denote unit vectors; $\lVert\cdot\rVert$ denotes norms.
 - All speeds are nondimensional after choosing $L_0, T_0$ so that $v = L_0/T_0 = 1$.
 - Assemblies are dynamical geometries of Architrino transceivers (not point particles). Their effective field/wave behavior is the net superposition of their constituent Architrinos evolving under the equation of motion; any “emission/absorption” attributed to an assembly is shorthand for this superposed dynamics.
+- Vocabulary: Use “expanding spherical shells” as the canonical term for emitted structures; “wavefront” may be included once as a parenthetical synonym at first use. Avoid generic “spheres” or “ridges” in technical statements (reserve “ridges” for analogies).
