--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
@@ -26,7 +26,7 @@ $$
 with durations measured separately as $\Delta t = t_2 - t_1$. We do not define any 4D arc length mixing time and space.
 
 ### **Sphere Stream**
-As an Architrino moves along its path $\mathcal{P}_a$, it continuously emits expanding potential spheres. The collection of all spheres emitted from its past path, as they exist at a single moment in time, is called the **sphere stream**.
+As an Architrino moves along its path $\mathcal{P}_a$, it continuously emits expanding spherical shells (wavefronts). The collection of all spheres emitted from its past path, as they exist at a single moment in time, is called the **sphere stream**.
 
 Mathematically, at an observation time $t_{obs}$, the sphere stream is the family of all spheres $S_{t_0}$ emitted at each past moment $t_0 \le t_{obs}$. Each sphere $S_{t_0}$ is centered at the historical position $\mathbf{s}_a(t_0)$ and has a radius $r(t_0) = v\,(t_{obs} - t_0)$.
 
@@ -56,7 +56,7 @@ Sphere streams from different Architrinos pass through each other without intera
 ### **The Stationary Architrino and Absolute Space**
 A special and fundamental case arises when an Architrino is stationary with respect to absolute space, i.e., its velocity $\mathbf{v}_a = 0$.
 
--   **Static Sphere Stream Geometry:** For a stationary Architrino at a fixed position $\mathbf{s}_{fixed}$, its sphere stream consists of a continuous family of perfectly concentric spheres. While each individual sphere expands, the overall geometric form of the stream is static and time-invariant.
+-   **Static Sphere Stream Geometry:** For a stationary Architrino at a fixed position $\mathbf{s}_{fixed}$, its sphere stream consists of a continuous family of perfectly concentric spherical shells. While each individual shell expands, the overall geometric form of the stream is static and time-invariant.
 
 -   **Bridge to Absolute Space:** This state is physically distinguishable from any state of non-zero velocity. An Architrino in motion ($\mathbf{v}_a \neq 0$) generates a non-concentric sphere stream whose pattern is dynamic. The perfect symmetry of the stationary stream provides a unique, observable reference frame. Therefore, the state of being at rest in absolute space is not relative but absolute, providing a direct mathematical and physical bridge to the underlying structure of absolute space.
 
