--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Architrino.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Architrino.md
@@ -74,13 +74,13 @@ Geodesics and dynamics: The background is flat and non-dynamical; free motion fo
 This section details more advanced concepts regarding the Architrino's motion and its field generation.
 
 #### **Velocity Regimes and Local Field Interaction**
-The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a|$. Its velocity relative to the field speed $v$ defines three distinct dynamic regimes. Consider a particle at position $\mathbf{s}_a(t_{\text{now}})$ moving with velocity $\mathbf{v}_a$. At an infinitesimal time $\Delta t$ later, its new position is $\mathbf{s}_a(t_{\text{now}} + \Delta t)$. The wavefront it emitted at $t_{\text{now}}$ has expanded to a radius of $r = v \Delta t$.
+The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a|$. Its velocity relative to the field speed $v$ defines three distinct dynamic regimes. Consider a particle at position $\mathbf{s}_a(t_{\text{now}})$ moving with velocity $\mathbf{v}_a$. At an infinitesimal time $\Delta t$ later, its new position is $\mathbf{s}_a(t_{\text{now}} + \Delta t)$. The spherical shell it emitted at $t_{\text{now}}$ has expanded to a radius of $r = v \Delta t$.
 
 -   **Sub-field Speed ($|\mathbf{v}_a| < v$):** The particle travels a distance less than the shell's radius. It is located *inside* the sphere of its most recent emission, lagging behind it.
 -   **Super-field Speed ($|\mathbf{v}_a| > v$):** The particle travels a distance greater than the shell's radius. It is located *outside* the sphere of its most recent emission, moving ahead of it.
 -   **Symmetry Point ($|\mathbf{v}_a| = v$):** The particle travels exactly on the edge of its own expanding spherical shell. This represents a critical symmetry-breaking point in its dynamics.
 
-It is important to distinguish this immediate relationship (between $t_{\text{now}}$ and $t_{\text{now}} + \Delta t$) from the possibility of an Architrino intersecting one of its own wavefronts emitted earlier in its path history. This is somewhat analogous to a speedboat passing its own wake, and later curving or stopping such that its past wake catches up and passes. These regimes control the structure and multiplicity of causal intersection times $\mathcal{C}_a(t)$ along worldlines (see Action and Interaction).
+It is important to distinguish this immediate relationship (between $t_{\text{now}}$ and $t_{\text{now}} + \Delta t$) from the possibility of an Architrino intersecting one of its own spherical shells emitted earlier in its path history. This is somewhat analogous to a speedboat passing its own wake, and later curving or stopping such that its past wake catches up and passes. These regimes control the structure and multiplicity of causal intersection times $\mathcal{C}_a(t)$ along worldlines (see Action and Interaction).
 
 #### **Velocity-Modulated Emission**
 While an Architrino is a constant rate emitter of potential per unit time, the strength of the impulse generated at any instant is modulated by its speed. The emission strength is inversely related to the particle's speed, being maximal for a stationary particle and decreasing as speed increases.
