--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
@@ -12,7 +12,7 @@
 
   where $c$ is the constant **field speed** (you wrote $dr/dt=$ field speed; I call that $c$).
 * Each emitted shell carries a **strength** $Q$ (I’ll call that “shell amplitude” — the physical meaning depends on your application: charge, potential impulse, energy, etc.).
-* The emitter makes shells at a constant **time rate** $R$ \[shells per second]. So the *source amplitude per unit time* (strength inserted into the field per second) is of order $q(t)\sim Q\times R$ (exactly $q(t)=\sum_n Q\,\delta(t-\tau_n)$ if shells are discrete impulses at times $\tau_n$; in the limit of many closely spaced shells you may treat $q(t)$ as continuous).
+* Continuous source (preferred): model the emitter as a moving point injection with time-density $q(t)$ (amplitude per unit time) at its instantaneous position, i.e., $S(\mathbf{x},t)=q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big)$. Each instant $t_0$ contributes a spherical shell; we do not count “shells per second” (pulse trains are merely numerical surrogates).
 * We want to know the field $\phi(\mathbf{x},t)$ (I’ll call the scalar field “potential” or simply $\phi$) produced at any point $\mathbf{x}$ and time $t$.
 
 I’ll explain **a time-based PDE/source** as well as **a integral / Green’s function / delayed solution** for this setup, define every symbol I use, and show how the expanding shells show up in each method. I’ll highlight how slowing/stopping the emitter is handled.
@@ -40,28 +40,18 @@ $$
 
 ### Point (moving) source form
 
-If the emitter injects instantaneous shells of strength $Q$ at times $\tau_n$, a compact way to write the source is
+Use a continuous time-density of emission at the moving point:
 
 $$
-S(\mathbf{x},t) \;=\; \sum_n Q\,\delta\!\big(t-\tau_n\big)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(\tau_n)\big).
+S(\mathbf{x},t) \;=\; q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big).
 $$
 
-If the shells are produced at constant rate $R$ and are very frequent you can approximate by a continuous source amplitude $q(t)$. For example a continuous steady production of shells each of strength $Q$ at rate $R$ gives an average source per time
-
-$$
-q(t) \approx Q\,R \quad\text{(units: field-strength per second)}.
-$$
-
-Then you write a smoothed source
-
-$$
-S(\mathbf{x},t)= q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big).
-$$
+Here $q(t)$ has units “amplitude per unit time.” The finite-speed wave operator then generates outgoing spherical wavefronts automatically; no discrete shell count is assumed.
 
 **How expanding shells appear**
 
 * You did **not** put a “radius” into the right-hand side. Instead, the PDE and the finite speed $c$ cause any instantaneous injection at the point $\mathbf{x}_s(\tau)$ to produce an *outgoing spherical wave* whose wavefront moves outward at speed $c$. That is the built-in behavior of the wave equation.
-* For a single impulse $Q\,\delta(t-\tau)\delta(\mathbf{x}-\mathbf{x}_s)$ the analytic 3-D solution is a spherical wave with amplitude $\sim Q/(4\pi r)$ concentrated on the moving shell $r=c(t-\tau)$ (I will show the explicit integral/Green form in Method 2). So **Method 1** is simply the PDE whose solutions are those expanding shells.
+* The Green’s function ensures that, at $(\mathbf{x},t)$, only the path history emission $q(\tau)$ with $\tau = t - r/c$ contributes, producing an outgoing spherical wave with amplitude $q(\tau)/(4\pi r)$ supported on $r=c(t-\tau)$. Thus Method 1 with $S(\mathbf{x},t)=q(t)\delta(\mathbf{x}-\mathbf{x}_s(t))$ naturally yields expanding shells at speed $c$.
 
 **Why $v$ (emitter speed) doesn’t cause blow-ups**
 
@@ -130,7 +120,7 @@ $$
 {4\pi\,|\mathbf{x}-\mathbf{x}_s(\tau)|}\; d\tau\;}
 $$
 
-* $q(\tau)$ is the instantaneous source amplitude at time $\tau$. In your shell model, if each shell has strength $Q$ and shells occur at times $\{\tau_n\}$, then $q(\tau)=\sum_n Q\,\delta(\tau-\tau_n)$. If the emission is continuous with average rate $R$ and you approximate many shells per second, you might use $q(\tau)\approx Q\,R$ (or some smooth $q(\tau)$).
+* $q(\tau)$ is the continuous emission density per unit time at the emission instant $\tau$. For a steady source, $q(\tau)=q_0$ (constant); more generally, $q$ may vary smoothly with $\tau$.
 
 ### Evaluating the integral — the retarded time
 
@@ -190,18 +180,14 @@ If $\mathbf{x}_s(\tau)=\mathbf{x}_0$ (emitter fixed) and $q(\tau)=Q\,\delta(\tau
 
 ---
 
-# Short worked example (stationary emitter, discrete shells)
+# Short worked example (stationary emitter, continuous source)
 
-* Emitter at origin $\mathbf{x}_s=0$. Single shell at time $\tau_0$ with strength $Q$.
-* Field at radius $r=|\mathbf{x}|$ and time $t$ is
-
+* Emitter at origin $\mathbf{x}_s=0$. Continuous source with $q(t)\equiv q_0$ (constant).
+* From the retarded formula, the field at radius $r=|\mathbf{x}|$ and time $t$ is
   $$
-  \phi(r,t) = \begin{cases}
-  \dfrac{Q}{4\pi r}, & \text{if } t=\tau_0 + r/c \text{ (shell exactly arrives)},\\[6pt]
-  0, & \text{otherwise (for an idealized infinitely thin shell)}.
-  \end{cases}
+  \phi(r,t) \;=\; \frac{q_0}{4\pi r},
   $$
-* If you produce shells at rate $R$ (say one every $1/R$ seconds) and each $Q$, then you get a sequence of impulses at times $t=\tau_n + r/c$ whose amplitudes are $Q/(4\pi r)$. If $R$ is large and shells overlap, the observed field becomes more continuous.
+  since the retarded condition selects $\tau = t - r/c$ and $q(\tau)=q_0$. If $q$ varies in time, then $\phi(r,t)=q(t-r/c)/(4\pi r)$.
 
 ---
 
@@ -216,10 +202,99 @@ If $\mathbf{x}_s(\tau)=\mathbf{x}_0$ (emitter fixed) and $q(\tau)=Q\,\delta(\tau
 
 # Bottom line (in 3 sentences)
 
-* Model the emitter as a **time-based** source of impulses $q(\tau)$ at location $\mathbf{x}_s(\tau)$.
+* Model the emitter as a time-based continuous emission density $q(\tau)$ at location $\mathbf{x}_s(\tau)$ (i.e., $S(\mathbf{x},t)=q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big)$).
 * Method 1 (solve the wave PDE with that source) is the easiest, robust way to get fields on a grid; the wave equation naturally produces expanding spherical shells at speed $c$.
 * Method 2 (use the Green’s function / retarded integral) gives an analytic expression: each emission at time $\tau$ produces a contribution at $(\mathbf{x},t)$ only if $t-\tau = |\mathbf{x}-\mathbf{x}_s(\tau)|/c$; the observed amplitude includes the geometric $1/(4\pi r)$ decay and a Doppler/retardation factor $1-\mathbf{n}\cdot\mathbf{v}_s/c$.
 
 ---
+
+# 3) Event-driven radial-transport + per-hit EOM (current canonical method)
+
+Physical idea: represent emission as a conserved, razor-thin spherical shell (a measure on the sphere), then drive particle motion by summing purely radial per-hit accelerations at causal intersection times. We work in units with field speed $v=1$ unless noted; replace $v$ by $c$ otherwise.
+
+Field representation (transport/continuity form)
+- Source impulse at $(t_0,\mathbf{s}_0)$ creates a shell supported on $r = v(t-t_0)$ with surface density that conserves a constant per-shell amplitude $q$ (no speed-based dimming):
+  $$
+  \rho(t,\mathbf{s}) \;=\; \frac{q}{4\pi r^2}\,\delta\!\big(r - v(t-t_0)\big)\,H(t-t_0),\quad r=\|\mathbf{s}-\mathbf{s}_0\|.
+  $$
+- This solves the radial continuity (transport) equation
+  $$
+  \partial_t \rho + \nabla\!\cdot\!\big(v\,\hat{\mathbf{r}}\,\rho\big) \;=\; q\,\delta(t-t_0)\,\delta^{(3)}(\mathbf{s}-\mathbf{s}_0).
+  $$
+- Emission is continuous with constant time-density $q(t)\equiv q_0$ (no explicit emitter-speed dimming).
+
+Per-hit equation of motion (EOM)
+- For a receiver $o'$ at time $t$ and a source $j$, causal emission times satisfy
+  $$
+  \|\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)\| = v\,(t-t_0),\qquad t_0<t.
+  $$
+- Each root contributes a purely radial acceleration
+  $$
+  \mathbf{a}_{o'\leftarrow j}(t;t_0)
+  \;=\;
+  \kappa\,\sigma_{q_j q_{o'}}\,\frac{|q_j q_{o'}|}{r^2}\,\hat{\mathbf{r}},
+  \quad
+  \hat{\mathbf{r}}=\frac{\mathbf{s}_{o'}(t)-\mathbf{s}_j(t_0)}{r},\ r>0,
+  $$
+  with total acceleration the sum over sources and roots. Convention $H(0)=0$ removes the instantaneous self-kick at $\tau=0$. Optional mollification replaces $\delta(\cdot)$ by $\delta_\eta(\cdot)$ to produce smooth pushes.
+
+Implementation checklist
+- Root finding: solve $F(t_0;t)=\|\mathbf{s}_{o'}(t)-\mathbf{s}_j(t_0)\|-v(t-t_0)=0$ for all $j$ (including $j=o'$ for self-hits when kinematics permit).
+- Accumulation: compute $r,\hat{\mathbf{r}}$, apply $1/r^2$, then superpose.
+- Time stepping: impulsive mode (events) or mollified mode ($\eta>0$) with standard ODE integrators.
+- Self-interaction: appears when the worldline outruns recent shells ($\|\mathbf{v}\|>v$ for some emissions); self-hits are repulsive (like-on-like).
+
+Relation to Methods 1 and 2
+- This is a transport/continuity model, not the scalar wave equation. The $1/r^2$ factor is a surface-density normalization (Gauss-like on moving spheres); it is compatible with conserving total emission per shell. In Method 2 the $1/(4\pi r)$ factor appears for a wave amplitude; taking gradients connects these scalings when mapping to forces.
+- The Doppler-type Jacobian $1-\mathbf{n}\!\cdot\!\mathbf{v}_s/c$ from Method 2 is not explicit here; geometric normalizations are absorbed into $\kappa$ by convention. If desired, include an extra per-hit weighting by this Jacobian to align magnitudes with retarded-integral predictions; otherwise geometry and timing alone encode speed effects.
+- Numerically, this method targets particle dynamics directly (per-hit ODEs) rather than evolving a full field (Method 1) or evaluating fields at sparse probes (Method 2).
+
+Plain language: Treat the field as razor-thin “paint” spread over a growing sphere so the total amount stays the same. Every time a shell reaches you, you get a straight-line shove that falls off like one over distance squared; we either treat it as a sharp kick or a short, smooth nudge.
+
+---
+
+## Pros and cons (comparative)
+
+Method 1 — Time-based PDE (wave equation)
+- Pros
+  - Physically standard propagation at fixed speed $c$; expanding spheres emerge automatically.
+  - Robust on grids; handles inhomogeneous media, damping, and boundaries.
+  - Good for full-field visualization and energy bookkeeping in continuum form.
+- Cons
+  - Computationally heavy for many-particle dynamics (3D grids, CFL constraints).
+  - Requires careful numerics to avoid dispersion/reflection; mesh choices can bias results.
+  - Mapping grid fields to the radial-only per-hit ODE can add another modeling layer.
+
+Method 2 — Retarded Green’s function (integral)
+- Pros
+  - Exact in homogeneous free space; no grid or time stepping for the field.
+  - Makes causality explicit via retarded times; captures Doppler/Jacobian $1-\mathbf{n}\!\cdot\!\mathbf{v}_s/c$ automatically.
+  - Efficient when you need the field at a few observation points; excellent for analysis and cross-checks.
+- Cons
+  - Requires root-finding for each (observer, time) pair; multiple roots possible when sources outrun shells.
+  - Costly when many receivers/sources are present; bookkeeping grows quickly.
+  - Needs careful handling near tangencies (small Jacobians) and in multi-hit/self-hit regimes.
+
+Method 3 — Event-driven radial-transport + per-hit EOM (current canonical)
+- Pros
+  - Directly implements the project’s delayed, radial-only interaction law with constant emission cadence and no explicit emitter-speed dimming.
+  - Natural support for self-hits and superposition; local $1/r^2$ weighting makes near sources dominate.
+  - Numerically lightweight for particle dynamics; works cleanly with impulsive or mollified ODE integration.
+- Cons
+  - Not derived from the scalar wave equation; global field-energy accounting is indirect (via mollified potentials).
+  - Omits the explicit retarded-time Jacobian factor from Method 2; relies on $\kappa$ calibration (or optional Jacobian weighting).
+  - Accuracy depends on robust causal-root finding and regularization choices in complex multi-hit scenarios.
+
+---
+
+## Recommendation (going forward)
+
+- Use Method 3 as the primary engine for particle dynamics and assemblies. It matches the model’s axioms (radial-only action, constant emission cadence) and scales well.
+- Adopt Method 2 as the analytic reference for calibration and validation. Calibrate $\kappa$ so simple benchmarks (stationary/slow sources, symmetric binaries) agree between Methods 2 and 3 at the per-hit level; optionally include the retarded-time Jacobian per hit if strict alignment with Method 2 is required.
+- Reserve Method 1 for full-field studies (visualization, media, boundary effects) and for end-to-end tests of numerical stability; it is valuable but unnecessary for routine ODE-based assembly simulations.
+- Documentation/actionables: keep the continuity-form field definition and per-hit EOM as the canonical statement; add a brief appendix mapping densities (Method 3) to potentials (Method 2) to clarify when $1/r$ vs $1/r^2$ factors appear and how calibration preserves totals.
+
+Plain language: Keep using the event-driven, radial-only method for dynamics, check it against the retarded integral to set the knobs, and bring out the PDE only when you need whole-field pictures or complex media.
+
 
 
